<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PushBox</string>
    <string name="menu_music_settings">Music Settings</string>
    <string name="menu_help">Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Push Box</string>
    <string name="about">About</string>
    <string name="continueBut">Continue</string>
    <string name="newGame">New Game</string>
    <string name="exit">Exit</string>
    <!-- <string name="dlltitle">Warnning</string> -->

</resources>